<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.SignFragment">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/mToolbar"
            app:title="@string/signin_fragment_toolbar"
            app:navigationIcon="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_fragment_signin"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:textSize="60sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signin_fragment_username"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/mUserName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signin_fragment_password"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/mPasword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signin_fragment_comfirm"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/mConfirmPasword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/signin_fragment_signin_button"
                android:id="@+id/mAdd" />

        </LinearLayout>

    </LinearLayout>
</layout>

